--- a/client-next/src/components/datalist-cmp/datalist-cmp.scss
+++ b/client-next/src/components/datalist-cmp/datalist-cmp.scss
@@ -36,7 +36,7 @@ $gap: .5rem;
                 }
             }
             .filters-container{
-                overflow: hidden;
+                overflow: auto;
                 max-height: 0;
                 transition: max-height .3s ease-in-out;
             };
